# django-testing-masterclass

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
testproject/: manage.py
testproject/blog/: models.py  serializers.py  tasks.py  urls.py  views.py
testproject/blog/migrations/: 0001_initial.py
testproject/testproject/: settings.py  test_settings.py
testproject/tests/: conftest.py  factories.py  test_api.py  test_celery_tasks.py  test_mocking.py  test_models.py  test_serializers.py  test_views.py
tests/: test_background_tasks.py  test_django52_patterns.py  test_django60_patterns.py
